<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >
             
    <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:textColor="#DA70D6" >

                    <TextView
                        android:id="@+id/tvMessage1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="38dp"
                        android:background="@drawable/purple"
                        android:text="@string/message1"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/tvMessage2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@+id/textView1"
                        android:layout_below="@+id/textView1"
                        android:layout_marginTop="39dp"
                        android:background="@drawable/green"
                        android:text="@string/message2"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/tvMessage3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@+id/textView2"
                        android:layout_below="@+id/textView2"
                        android:layout_marginTop="38dp"
                        android:background="@drawable/purple"
                        android:text="@string/message3"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/tvMessage4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/textView3"
                        android:layout_below="@+id/textView3"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/green"
                        android:text="@string/message4"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/tvMessage5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="42dp"
                        android:background="@drawable/purple"
                        android:text="@string/message5"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                </LinearLayout>

              

</LinearLayout>